--- a/src/styles.scss
+++ b/src/styles.scss
@@ -141,7 +141,7 @@ $gutter: 50px;
 	position: relative;
 	width: 100vw;
 	height: 100vh;
-	background-color: #2e0e0e;
+	/*background-color: #2e0e0e;
 	background: radial-gradient(
 			circle,
 			transparent 20%,
@@ -161,7 +161,7 @@ $gutter: 50px;
 			25px 25px,
 		linear-gradient(#5a1f1f 2px, transparent 2px) 0 -1px,
 		linear-gradient(90deg, #5a1f1f 2px, #2e0e0e 2px) -1px 0;
-	background-size: 50px 50px, 50px 50px, 25px 25px, 25px 25px;
+	background-size: 50px 50px, 50px 50px, 25px 25px, 25px 25px;*/
 	padding: $gutter;
 	box-sizing: border-box;
 
