--- a/src/styles.scss
+++ b/src/styles.scss
@@ -122,6 +122,8 @@ body {
         color: #fff;
         gap: 1rem;
         z-index: 1000;
+        background: rgba(0, 0, 0, 0.8) url('assets/images/texture_noise.png');
+        background-size: cover;
 
         h2 {
                 font-family: 'Cinzel', serif;
